--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
         <!-- Tabs -->
         <div class="tabs">
             <div class="tab-list">
-                <button class="tab-button active">Active Task</button>
-                <button class="tab-button">Completed</button>
+                <button class="tab-button">All Task</button>
+                <button class="tab-button">Active Task</button>
+                <button class="tab-button completed-btn">
+                    <i class="fa-solid fa-plus"></i>
+                    Completed
+                </button>
             </div>
         </div>
 
@@ -135,7 +139,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-cancle btn-secondary">Cancel</button>
-                        <button type="submit" class="btn btn-primary">Create Task</button>
+                        <button type="submit" class="btn btn-primary submit-btn">Create Task</button>
                     </div>
                 </form>
             </div>
